Bug 1396349 - Remove the collapse sidebar pane button in the Inspector. r=pbro
UltraBlame original commit: 6f52baae3f9d6db74c9b86ea25bc276416c22210

--- a/devtools/client/themes/inspector.css
+++ b/devtools/client/themes/inspector.css
@@ -381,22 +381,6 @@ image
 #
 inspector
 -
-sidebar
--
-toggle
--
-box
-{
-line
--
-height
-:
-initial
-;
-}
-#
-inspector
--
 breadcrumbs
 -
 toolbar
